--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div class="text">
 	<h1>BITCOIN</h1>
-	<h3>Что это?</h3>
+	<h3><strong>Что это такое?</strong></h3>
 	<a href="https://ru.wikipedia.org/wiki/Биткоин" class="but">Что такое биткоин</a>
 </div>
 
