--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href='css/css.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
+<!-- solution -->
 <div class="text">
 	<h1>BITCOIN</h1>
 	<h3><strong>Что это такое?</strong></h3>
